--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,11 @@
 platform = espressif32
 board = ttgo-t-beam
 framework = arduino
+monitor_speed = 115200
+
+lib_deps =
+    closedcube/ClosedCube HDC1080@^1.3.0
+    mikalhart/TinyGPSPlus@^1.0.3
+    sandeepmistry/LoRa@^0.8.0
+    olikraus/U8g2@^2.35.9
+    lewisxhe/XPowersLib@^0.2.9
